--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,9 @@
                     </figure>
                 </div>
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
-                    <p>{{site.author-about}}</p>
+                    <p>Activity patterns of neurons have so far been examined both singly and in pairs. Higher order interactions (HOIs), or non-pairwise interactions between neurons, are being studied in an effort to improve analysis . The type and quantity of information stored in groups (pairs or multiplets) in the brain is revealed by information about organisational structure (o-info). Various methods to optimise the o-info implementations in NumPy and Jax and integrating them with Frites will be included.
+
+</p>
                     <br>
                     <div class="container columns is-centered">
                         <div>
