--- a/_includes/dropdown.html
+++ b/_includes/dropdown.html
@@ -10,10 +10,10 @@
             {{sitepage.title}}
         </a>
         {% endunless %}
-        {% endfor %}
+        {% endfor %} -->
         <!-- <hr class="navbar-divider">
     <a class="navbar-item">
       Report an issue
-    </a> -->
+    </a>
     </div>
 </div> -->
