--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,7 @@
 html,
 body {
     font-family: 'Poppins', sans-serif;
+    font-size: 20px;
     scroll-behavior: smooth !important;
     transition: all 0.25s ease;
 }
