--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -4,9 +4,16 @@
       <h1 class="title has-text-white is-size-1 is-uppercase has-text-weight-bold">
         Optimization of the computations of HOIs
       </h1>
-      <h3 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
+      <h2 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
         Mentor: Etienne Combrisson, Daniele Marinazzo
-      </h3>
+      </h2>
+      <a href="https://github.com/brainets/hoi">Github repo of hoi</a>
+
+<h2>To the mentors,</h2>
+<h3>Etienne Combrisson, postdoc researcher in the Institute of Neuroscience of la Timone in marseille, France (twitter: @kNearNeighbors)</h3>
+<h3>Prof. Daniele Marinazzo, professor in the department of Data Analysis at Ghent University, Belgium, (tweeter: @dan_marinazzo)</h3>
+<p>
+I wanted to express my sincere gratitude for your guidance, support, and mentorship throughout the Google Summer of Code program. Your expertise and patience have been invaluable in helping me navigate challenges and grow as a developer. I am truly grateful for this incredible learning experience and the opportunity to work under your guidance. Thank you for your time, insights, and dedication throughout the project!</p>
       <hr>
       <a href="{{site.url}}{{site.baseurl}}/#about"
         class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
