--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="columns">
                 <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd">
                     <figure class="image">
-                        <img class="is-rounded" src="{{site.author-image}}" alt="{{site.author-name}}">
+                        <img class="is-rounded" src="https://3.bp.blogspot.com/-ktQweRGoEGI/WylS9dzrdNI/AAAAAAAABoE/d3ZiM7YpB70uFCTwFOaX1FkgLgBRHK9JwCLcBGAs/w1200-h630-p-k-no-nu/GSoC%2B-%2BVertical%2BNarrow%2B-%2BGray%2BText%2B-%2BWhite%2BBG.png" alt="{{site.author-name}}">
                     </figure>
                 </div>
                 <div class="column has-text-left-desktop has-text-left-tablet has-text-left-fullhd has-text-left-widescreen">
