--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -5,15 +5,16 @@
         Optimization of the computations of HOIs
       </h1>
       <h2 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
-        Etienne Combrisson, postdoc researcher in the Institute of Neuroscience of la Timone in marseille, France (twitter: @kNearNeighbors)
+        Mentor: Etienne Combrisson, Daniele Marinazzo
       </h2>
-      <h2 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
-        Prof. Daniele Marinazzo, professor in the department of Data Analysis at Ghent University, Belgium, (tweeter: @dan_marinazzo)
-      </h2>
-      <a style="font: size 20px; color: aqua;" href="https://github.com/brainets/hoi">Github repo of hoi</a>
+      <a style="font: size 14px;" href="https://github.com/brainets/hoi">Github repo of hoi</a>
       <br>
       <br>
-<p style="color:rgb(239, 239, 241); font: size 20px;">
+
+<h2 style="color:rgb(239, 239, 241); font: size 14px;">To the mentors,</h2>
+<h3 style="color:rgb(239, 239, 241); font: size 14px;">Etienne Combrisson, postdoc researcher in the Institute of Neuroscience of la Timone in marseille, France (twitter: @kNearNeighbors)</h3>
+<h3 style="color:rgb(239, 239, 241); font: size 14px;">Prof. Daniele Marinazzo, professor in the department of Data Analysis at Ghent University, Belgium, (tweeter: @dan_marinazzo)</h3>
+<p style="color:rgb(239, 239, 241); font: size 11px;">
 I wanted to express my sincere gratitude for your guidance, support, and mentorship throughout the Google Summer of Code program. Your expertise and patience have been invaluable in helping me navigate challenges and grow as a developer. I am truly grateful for this incredible learning experience and the opportunity to work under your guidance. Thank you for your time, insights, and dedication throughout the project!</p>
       <hr>
       <a href="{{site.url}}{{site.baseurl}}/#about"
