--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -11,11 +11,11 @@
       <br>
       <br>
 
-<h2 style="color:rgb(239, 239, 241); font: size 14px;">To the mentors,</h2>
-<h3 style="color:rgb(239, 239, 241); font: size 14px;">Etienne Combrisson, postdoc researcher in the Institute of Neuroscience of la Timone in marseille, France (twitter: @kNearNeighbors)</h3>
-<h3 style="color:rgb(239, 239, 241); font: size 14px;">Prof. Daniele Marinazzo, professor in the department of Data Analysis at Ghent University, Belgium, (tweeter: @dan_marinazzo)</h3>
+<h2 style="color:rgb(119, 186, 191); font: size 14px;">To the mentors,</h2>
+<h3 style="color:rgb(119, 186, 191); font: size 14px;">Etienne Combrisson, postdoc researcher in the Institute of Neuroscience of la Timone in marseille, France (twitter: @kNearNeighbors)</h3>
+<h3 style="color:rgb(119, 186, 191); font: size 14px;">Prof. Daniele Marinazzo, professor in the department of Data Analysis at Ghent University, Belgium, (twitter: @dan_marinazzo)</h3>
 <p style="color:rgb(239, 239, 241); font: size 11px;">
-I wanted to express my sincere gratitude for your guidance, support, and mentorship throughout the Google Summer of Code program. Your expertise and patience have been invaluable in helping me navigate challenges and grow as a developer. I am truly grateful for this incredible learning experience and the opportunity to work under your guidance. Thank you for your time, insights, and dedication throughout the project!</p>
+I want to express my sincere gratitude for your guidance, support, and mentorship throughout the Google Summer of Code program. Your expertise and patience have been invaluable in helping me navigate challenges and grow as a developer. I am truly grateful for this incredible learning experience and the opportunity to work under your guidance. Thank you for your time, insights, and dedication throughout the project!</p>
       <hr>
       <a href="{{site.url}}{{site.baseurl}}/#about"
         class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
